--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -31,6 +31,7 @@
   font-weight: 500;
   line-height: 1.214;
   padding: 0;
+  outline: none;
 }
 
 .popup__btn {
@@ -91,6 +92,7 @@
 }
 
 .popup__error {
+  text-align: center;
   color: #FF0000;
   display: block;
   font-family: 'Inter', sans-serif;
